# Dailynest

./: .env  .env.example  .gitignore  IAusage.md  Makefile  README.md  compose.yml
.devcontainer/: devcontainer-lock.json  devcontainer.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
backend/app/models/: __init__.py  agenda_models.py  file_models.py  notepad_models.py  task_models.py  user_models.py
backend/app/routers/: __init__.py  agenda_router.py  auth_router.py  file_router.py  notepad_router.py  task_router.py  user_router.py
backend/app/schemas/: __init__.py  agenda_schema.py  file_schema.py  notepad_schema.py  task_schema.py  user_schema.py
backend/app/services/: __init__.py  agenda_service.py  auth_service.py  file_service.py  notepad_service.py  task_service.py  user_service.py
frontend/: README.md  agenda.html  app.js  files.html  how-it-works.html  index.html  login.html  notepad.html  profile.html  register.html  style.css  tasks.html
frontend/css/: animations.css  components.css  howto.css  layout.css  reset.css  variables.css
frontend/css/modules/: agenda.css  files.css  notepad.css  tasks.css
frontend/js/: animations.js  api.js  auth.js  router.js  toast.js  validations.js
frontend/js/components/: sidebar.js
frontend/js/modules/: agenda.js  files.js  notepad.js  profile.js  tasks.js  validations.js
volumes/pgadmin/: pgadmin4.db
volumes/pgadmin/sessions/: b1a0e08e-a4ca-4d69-a73f-94cf1f2f5a9a
