[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "sqlmodel==0.0.16",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "passlib[bcrypt]",
    "bcrypt>=3.2.0,<5",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = []

[tool.uv.workspace]
members = [
    "backend",
]
